# hypermodern-python-github

./: .gitlab-ci.yml  README.md  azure-pipelines.yml  hypermodern-python-link.txt  install-developer-tools.txt  links.txt
.github/workflows/: run-tests.yml
template-project/: .flake8  .gitignore  .pre-commit-config.yaml  __init__.py  noxfile.py  pyproject.toml
template-project/docs/: api.rst  conf.py  foo.rst  index.rst  reference.rst
template-project/src/template_project/: __init__.py  mymodule.py
template-project/src/template_project/nestedmodule/: nestedfile.py
template-project/tests/: test_mymodule.py
template-project/tests/nestedmodule/: test_nestedfile.py
