[tool.poetry]
name = "template-project"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = {version = "^4.11.2", python = "<3.8"}

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.12.1"
black = "^21.7b0"
flake8 = "^3.9.2"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.3"
flake8-bugbear = "^21.4.3"
flake8-import-order = "^0.18.1"
mypy = "^0.910"
typeguard = "^2.12.1"
flake8-annotations = "^2.6.2"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
darglint = "^1.8.0"
Sphinx = "^4.1.2"
sphinx-autodoc-typehints = "^1.12.0"
dparse = "^0.6.0"

[tool.poetry.group.dev.dependencies]
safety = "^2.3.5"
pytest = "^7.3.1"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["template_project"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
